[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "zarr-swiftstore"
dynamic = ["version"]
description = "OpenStack Swift object storage backend for zarr"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Pavan Siligam", email = "pavan.siligam@gmail.com" }]
dependencies = [
    "zarr>=3.0,<4",
    "python-swiftclient>=3.10,<5",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/siligam/zarr-swiftstore"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "coverage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools_scm]
# version is derived from git tags (e.g. tag v1.2.3 → version 1.2.3)
# fallback for builds outside a git repo
fallback_version = "1.2.3"

[tool.setuptools.packages.find]
where = ["."]
include = ["zarrswift*"]
